# spotify-trends-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  kaggle_import.py  main.py
app/api/: _utils.py  albums.py  artists.py  data_import.py  maps.py  popularity.py  root.py  tracks.py  trends.py
app/business/: countries.py  data_import.py  maps.py  popularity.py  trends.py  utils.py
app/controllers/: __init__.py  postgis.py
app/models/: albums.py  artists.py  configuration.py  countries.py  links.py  maps.py  tracks.py  trends.py
static/: index.html  script.js  styles.css
