[tool.poetry]
name = "spotify-charts-analysis"
version = "0.1.0"
description = ""
authors = ["Sophie Harren <sharren@stud.hs-bremen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
sqlmodel = "^0.0.22"
geoalchemy2 = "^0.17.0"
psycopg2-binary = "^2.9.10"
kagglehub = "^0.3.10"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
apscheduler = "^3.11.0"
playwright = "^1.50.0"
shapely = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
